<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="45dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:paddingBottom="10dp"
                android:padding="16dp"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/colorPrimaryDark"
                android:id="@+id/teacher_name_registerId" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_subject"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/colorPrimaryDark"
                android:id="@+id/teacher_subject_registerId" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:padding="16dp"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:id="@+id/teacher_password_registerId" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/enter_confirm_password"
                android:padding="16dp"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:id="@+id/teacher_confirmPassword_registerId" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:background="@drawable/buttun_selector"
            android:onClick="signIn"
            android:id="@+id/signIn_id"
            android:contentDescription="@string/sign_in" />
    </LinearLayout>
</FrameLayout>