<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mostafa.attender.AddStudent"
    android:background="@drawable/background2"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/button_marginTop">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textSize="22sp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/student_nameID" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_id"
            android:padding="16dp"
            android:textSize="22sp"
            android:textColor="@color/textColor"
            android:id="@+id/studentId" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="15dp"
        android:layout_marginTop="@dimen/button_marginTop"
        android:text="@string/add_student"
        android:layout_gravity="center"
        android:background="@drawable/buttun_selector"
        android:onClick="addStudent"
        android:id="@+id/addStudent_id" />

</LinearLayout>
