<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_teacher_functions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mostafa.attender.Activity.TeacherFunctions"
    android:fitsSystemWindows="true"
    android:background="@drawable/background2">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/teacher_AppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBar_height"
        android:elevation="4dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsingToolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"
                android:id="@+id/photoContainer"
                android:background="@drawable/collapsing" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="44dp"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="40dp"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="15dp"
                android:layout_marginTop="90dp"
                android:text="@string/update_student"
                android:layout_gravity="center"
                android:background="@drawable/buttun_selector"
                android:onClick="updateStudent"
                android:id="@+id/update_id"
                android:contentDescription="@string/update_student" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="15dp"
                android:layout_marginTop="90dp"
                android:text="@string/take_ateendance"
                android:layout_gravity="center"
                android:background="@drawable/buttun_selector"
                android:onClick="takeAttendance"
                android:id="@+id/take_attendance_id"
                android:contentDescription="@string/take_ateendance" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/add_fab"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/fab_add"
        android:elevation="6dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="addStudent"
        android:stateListAnimator="@animator/anim" />

    <me.yugy.github.reveallayout.RevealLayout
        android:id="@+id/reveal_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <View
            android:id="@+id/reveal_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:background="@color/colorAccent" />

    </me.yugy.github.reveallayout.RevealLayout>

</android.support.design.widget.CoordinatorLayout>


